--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -20,9 +20,11 @@ html, body {
   height: 100%;
   font-family: "Outfit", sans-serif;
   font-optical-sizing: auto;
-  font-weight: 500;
+  font-weight: 400;
   font-style: normal;
   overflow-x: hidden;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;  /* Internet Explorer and Edge */
 }
 
 .font-secondary {
